Drop dependencies on Apache Commons libraries
They were only needed for minor convenience `isEmpty` / `isNotEmpty` style methods. All use cases for them are trivially achievable by means of the stdlib and don't justify the larger dependency footprint.

Signed-off-by: nscuro <nscuro@protonmail.com>